--- a/package.json
+++ b/package.json
@@ -4,7 +4,8 @@
   "description": "Atividade proposta de automação da Loja Ebac",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "cypress run",
+    "open": "cypress open"
   },
   "author": "EduardoBorboletas",
   "license": "ISC",
