--- a/package.json
+++ b/package.json
@@ -4,12 +4,14 @@
   "description": "Atividade proposta de automação da Loja Ebac",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "npx cypress open"
   },
   "author": "EduardoBorboletas",
   "license": "ISC",
   "dependencies": {
-    "cypress": "^14.5.0"
+    "cypress": "^14.5.0",
+    "cypress-html-reporter": "^11.0.0",
+    "dotenv": "^16.5.0"
   },
   "devDependencies": {
     "@faker-js/faker": "^9.8.0"
