--- a/package.json
+++ b/package.json
@@ -17,11 +17,11 @@
     "cypress": "^14.5.0",
     "cypress-html-reporter": "^11.0.0",
     "dotenv": "^16.5.0",
-    "mochawesome": "^7.1.3",
     "mochawesome-merge": "^5.0.0"
   },
   "devDependencies": {
     "@faker-js/faker": "^9.8.0",
-    "mocha": "^11.7.1"
+    "mocha": "^11.7.1",
+    "mochawesome": "^7.1.3"
   }
 }
